SR-4079: Make Enum CaseStmt introduce new type refinement context